--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
   
 }
 
-.sidebar h2
+.sidebar h2, #month-year-header
 {
 font-family: "Playfair Display";
 font-size: 1.2em;
@@ -325,7 +325,7 @@ margin-left: 10em;
           brightness(50%)
 }
 
-#add-task-btn
+#add-task-btn, #prev-month-btn, #next-month-btn
 {
   background-color: #212121;
   font-family: "Quicksand";
@@ -334,6 +334,11 @@ margin-left: 10em;
   border-radius: 0.3em;
   margin-top: 0.3em;
   cursor:pointer;
+}
+
+.calendar-navigation
+{
+  margin-bottom: 0.5em;
 }
 
 #add-task-btn:hover 
@@ -347,3 +352,4 @@ margin-left: 10em;
   box-shadow: 0 0.1em #666;
   transform: translateY(0.1em);
 }
+
